--- a/.gitignore
+++ b/.gitignore
@@ -81,6 +81,13 @@ target/
 # pdfs and papers 
 *.pdf
 
+
+models and checkpoints
+*.pth 
+*.pt
+*.npy
+
+
 # IPython
 profile_default/
 ipython_config.py
@@ -161,3 +168,8 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+
+
+
+# dataset 
+dataset/signals/data.txt
